final touches on design and color palette

--- a/pages/index-2.html
+++ b/pages/index-2.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>Latest News</title>
+  <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 
   <link rel="stylesheet" href="../css/style.css">
@@ -50,92 +51,89 @@
   <div class="news">
         <div class="row align-items-center">
           <h1>News</h1>
-          <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-            <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive float-left"alt="">
-            <h2>Tupac returns..</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-          </div>
-
-
-
-          <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-            <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-            <h2>Tupac returns..</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-
-
-          </div>
-
-          <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-            <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-            <h2>Tupac returns..</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-
-          </div>
-
-          <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-            <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-            <h2>Tupac returns..</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-          </div>
-
-
-          </div>
-
           <div class="row align-items-center">
-            <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-              <h1>Article</h1>
-              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-              <h2>Tupac returns..</h2>
+            <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+
+              <img src="../images/Sturgill Simpson, Chris Stapleton.png" class="img-responsive float-left"alt="">
+              <a href="#"><h2>Sturgill Simpson Joins Chris Stapleton on “SNL”</h2></a>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+            </div>
+
+            <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+
+              <img src="../images/Lorde copy.jpg" class="img-responsive"alt="">
+              <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
 
 
             </div>
 
-
-
             <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-              <h1>Article</h1>
-             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-             <h2>Tupac returns..</h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+              <img src="../images/SNL Aziz Ansari.JPG" class="img-responsive"alt="">
+
+              <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
             </div>
 
             <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-              <h1>Article</h1>
-              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-              <h2>Tupac returns..</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
+              <img src="../images/donald_trump_jay_z.jpg" class="img-responsive"alt="">
 
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-              <h1>Article</h1>
-              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-              <h2>Tupac returns..</h2>
+              <a href="#"><h2>Donald Trump Is Mad at JAY-Z.</h2></a>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
             </div>
 
 
-
-
             </div>
+            <div class="row align-items-center">
+              <div class="row align-items-center">
+                <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+
+                  <img src="../images/Sturgill Simpson, Chris Stapleton.png" class="img-responsive float-left"alt="">
+                  <a href="#"><h2>Sturgill Simpson Joins Chris Stapleton on “SNL”</h2></a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+                </div>
+
+                <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+
+                  <img src="../images/Lorde copy.jpg" class="img-responsive"alt="">
+                  <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
 
+                </div>
+
+                <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+
+                  <img src="../images/SNL Aziz Ansari.JPG" class="img-responsive"alt="">
+
+                  <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
+                </div>
+
+                <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+
+                  <img src="../images/donald_trump_jay_z.jpg" class="img-responsive"alt="">
+
+                  <a href="#"><h2>Donald Trump Is Mad at JAY-Z.</h2></a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+                </div>
+
+
+                </div>
 
  </div>
 
@@ -143,22 +141,63 @@
 <button type="button" class="btn btn-primary btn-block center-block btn-info" data-toggle="collapse" data-target="#more">Older news...</button>
 <div id="more" class="collapse">
   <div class="news">
+    <div class="row align-items-center">
+      <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+
+        <img src="../images/Sturgill Simpson, Chris Stapleton.png" class="img-responsive float-left"alt="">
+        <a href="#"><h2>Sturgill Simpson Joins Chris Stapleton on “SNL”</h2></a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+      </div>
+
+      <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+
+        <img src="../images/Lorde copy.jpg" class="img-responsive"alt="">
+        <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+
+      </div>
+
+      <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+
+        <img src="../images/SNL Aziz Ansari.JPG" class="img-responsive"alt="">
+
+        <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+      </div>
+
+      <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+
+        <img src="../images/donald_trump_jay_z.jpg" class="img-responsive"alt="">
+
+        <a href="#"><h2>Donald Trump Is Mad at JAY-Z.</h2></a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+      </div>
+
+
+      </div>
+
+      <div class="row align-items-center">
         <div class="row align-items-center">
-          <h1>News</h1>
           <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-            <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive float-left"alt="">
-            <h2>Tupac returns..</h2>
+
+            <img src="../images/Sturgill Simpson, Chris Stapleton.png" class="img-responsive float-left"alt="">
+            <a href="#"><h2>Sturgill Simpson Joins Chris Stapleton on “SNL”</h2></a>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
           </div>
 
-
-
           <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-            <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-            <h2>Tupac returns..</h2>
+
+            <img src="../images/Lorde copy.jpg" class="img-responsive"alt="">
+            <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
@@ -166,18 +205,20 @@
           </div>
 
           <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-            <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-            <h2>Tupac returns..</h2>
+
+            <img src="../images/SNL Aziz Ansari.JPG" class="img-responsive"alt="">
+
+            <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
           </div>
 
           <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-            <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-            <h2>Tupac returns..</h2>
+
+            <img src="../images/donald_trump_jay_z.jpg" class="img-responsive"alt="">
+
+            <a href="#"><h2>Donald Trump Is Mad at JAY-Z.</h2></a>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
           </div>
@@ -185,42 +226,7 @@
 
           </div>
 
-          <div class="row align-items-center">
-            <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-              <h1>Article</h1>
-              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-              <h2>Tupac returns..</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-
-            </div>
-
-
-
-            <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-              <h1>Article</h1>
-             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-             <h2>Tupac returns..</h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-
-            </div>
-
-            <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-              <h1>Article</h1>
-              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-              <h2>Tupac returns..</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-              <h1>Article</h1>
-              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-              <h2>Tupac returns..</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-            </div>
 
             <div row class="more-button">
 
