--- a/pages/index-5.html
+++ b/pages/index-5.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>New Music</title>
+  <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 
   <link rel="stylesheet" href="../css/style.css">
@@ -50,28 +51,28 @@
   <div class="row">
     <h1>Albums</h1>
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/anderson-paak-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/anderson-paak-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/anderson-paak-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/anderson-paak-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
@@ -85,28 +86,28 @@
     <div class="albums">
       <div class="row">
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/anderson-paak-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/anderson-paak-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/anderson-paak-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/anderson-paak-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
@@ -125,28 +126,28 @@
   <div class="row">
     <h1>Songs</h1>
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/donald-glover-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/donald-glover-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/donald-glover-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/donald-glover-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
@@ -160,28 +161,28 @@
     <div class="albums">
       <div class="row">
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/donald-glover-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/donald-glover-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/donald-glover-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/donald-glover-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
@@ -200,28 +201,28 @@
   <div class="row">
     <h1>Gigs</h1>
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
     </div>
 
     <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-      <img src="https://www.fillmurray.com/400/200" alt="">
+      <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
       <h3>Dark Side of the Moon - Pink Floyd</h3>
       <p>Brief Description</p>
 
@@ -235,28 +236,28 @@
     <div class="albums">
       <div class="row">
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
         </div>
 
         <div class=" col-xs-12 col-sm-6 col-md-3 thumbnail">
-          <img src="https://www.fillmurray.com/400/200" alt="">
+          <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
           <h3>Dark Side of the Moon - Pink Floyd</h3>
           <p>Brief Description</p>
 
