--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <title>B.READ</title>
+    <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -26,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="index.html#"><h1 class="navbar-brand">B.READ</h1></a>
+          <h1 href="index.html#" class="navbar-brand">B.READ</h1>
 
             <span><p class="navbar-text navbar-brand hidden-xs">News.Videos.Reviews.</p></span>
 
@@ -112,7 +113,7 @@
          <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
 
            <img src="./images/Sturgill Simpson, Chris Stapleton.png" class="img-responsive float-left"alt="">
-           <a href="#"><h2>Sturgill Simpson Joins Chris Stapleton on “SNL”</h2></a>
+           <a href="./pages/index-9.html"><h2>Sturgill Simpson Joins Chris Stapleton on “SNL”</h2></a>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
          </div>
