--- a/pages/index-3.html
+++ b/pages/index-3.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>Videos</title>
+  <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 
   <link rel="stylesheet" href="../css/style.css">
@@ -52,28 +53,22 @@
   <h1>Videos</h1>
   <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
-    <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
-
-    </video>
+    <img src="../images/Screen Shot 2018-01-28 at 20.01.19.png" alt="">
+    <a href="./index-7.html"><h2>Kali Uchis - After The Storm</h2></a>
 
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
-    <p>Sigrid proves shes worthy for success with latest performance on Graham Norton</p>
-
-    </video>
+    <img src="../images/Screen Shot 2018-01-28 at 20.02.16.png" alt="">
+    <a href="./index-8.html"><h2>Sigrid - Strangers</h2></a>
 
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
-    <p>Sigrid proves shes worthy for success with latest performance on Graham Norton</p>
-
-    </video>
+    <img src="../images/Screen Shot 2018-01-28 at 20.01.19.png" alt="">
+    <a href="./index-7.html"><h2>Kali Uchis - After The Storm</h2></a>
 
   </div>
 
@@ -82,30 +77,26 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
-    <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
+    <img src="../images/Screen Shot 2018-01-28 at 20.02.16.png" alt="">
+    <a href="./index-8.html"><h2>Sigrid - Strangers</h2></a>
 
-    </video>
+  </div>
+
+
+  <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
+
+    <img src="../images/Screen Shot 2018-01-28 at 20.01.19.png" alt="">
+    <a href="./index-7.html"><h2>Kali Uchis - After The Storm</h2></a>
 
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
-    <p>Sigrid proves shes worthy for success with latest performance on Graham Norton</p>
-
-    </video>
+    <img src="../images/Screen Shot 2018-01-28 at 20.02.16.png" alt="">
+    <a href="./index-8.html"><h2>Sigrid - Strangers</h2></a>
 
   </div>
 
-  <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
-
-    <img src="https://www.fillmurray.com/740/400" alt="">
-    <p>Sigrid proves shes worthy for success with latest performance on Graham Norton</p>
-
-    </video>
-
-  </div>
 
 </div>
 
@@ -117,29 +108,24 @@
          <h1>Videos</h1>
          <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-           <img src="https://www.fillmurray.com/740/400" alt="">
-           <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
-
-           </video>
+           <img src="../images/Screen Shot 2018-01-28 at 20.01.19.png" alt="">
+           <a href="./index-7.html"><h2>Kali Uchis - After The Storm</h2></a>
 
          </div>
 
 
          <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-           <img src="https://www.fillmurray.com/740/400" alt="">
-           <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
-
-           </video>
+           <img src="../images/Screen Shot 2018-01-28 at 20.02.16.png" alt="">
+           <a href="./index-8.html"><h2>Sigrid - Strangers</h2></a>
 
          </div>
 
+
          <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-           <img src="https://www.fillmurray.com/740/400" alt="">
-           <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
-
-           </video>
+           <img src="../images/Screen Shot 2018-01-28 at 20.01.19.png" alt="">
+           <a href="./index-7.html"><h2>Kali Uchis - After The Storm</h2></a>
 
          </div>
 
@@ -150,27 +136,26 @@
 
            <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-             <img src="https://www.fillmurray.com/740/400" alt="">
-             <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
-
-             </video>
+             <img src="../images/Screen Shot 2018-01-28 at 20.02.16.png" alt="">
+             <a href="./index-8.html"><h2>Sigrid - Strangers</h2></a>
 
            </div>
 
+
            <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-             <img src="https://www.fillmurray.com/740/400" alt="">
-             <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
-
-             </video>
+             <img src="../images/Screen Shot 2018-01-28 at 20.01.19.png" alt="">
+             <a href="./index-7.html"><h2>Kali Uchis - After The Storm</h2></a>
 
            </div>
+
+
            <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-             <img src="https://www.fillmurray.com/740/400" alt="">
-             <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
+             <img src="../images/Screen Shot 2018-01-28 at 20.02.16.png" alt="">
+             <a href="./index-8.html"><h2>Sigrid - Strangers</h2></a>
 
-             </video>
+           </div>
 
            </div>
 
