--- a/pages/index-4.html
+++ b/pages/index-4.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>New Music</title>
+  <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 
   <link rel="stylesheet" href="../css/style.css">
@@ -53,25 +54,25 @@
   <h1>This Week</h1>
   <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
+    <img src="../images/anderson-paak-best-artwork.jpg" alt="">
     <h3>Best New Album</h3>
-    <p>Flowerboy - Tyler the Creator</p>
+    <p>Malibu - Anderson Paak</p>
 
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
+    <img src="../images/chance-the-rapper-best-artwork.jpg" alt="">
     <h3>Best New Artist</h3>
-    <p>Flowerboy - Tyler the Creator</p>
+    <p>Chance the Rapper</p>
 
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-4 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
+    <img src="../images/donald-glover-best-artwork.jpg" alt="">
     <h3>Best New song</h3>
-    <p>Flowerboy - Tyler the Creator</p>
+    <p>Red Bone - Childish Gambino</p>
 
   </div>
 
